--- a/Julian_GameIntroductionApp/Base.lproj/Main.storyboard
+++ b/Julian_GameIntroductionApp/Base.lproj/Main.storyboard
@@ -1,24 +1,150 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="j3I-BR-eG9">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Item-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="AddGameViewController" customModule="Julian_GameIntroductionApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="ゲームのタイトルを入力" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Ng1-LX-92L">
+                                <rect key="frame" x="40" y="86" width="294" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="ゲームのURL (任意)" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dRO-AP-iLI">
+                                <rect key="frame" x="40" y="173" width="294" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NUg-Nw-fNa">
+                                <rect key="frame" x="128" y="294" width="118" height="79"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="20"/>
+                                <state key="normal" title="保存"/>
+                                <connections>
+                                    <action selector="tappedSavedButton" destination="BYZ-38-t0r" eventType="touchUpInside" id="1gX-xT-7Kf"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="NKr-mR-bQn"/>
+                    <connections>
+                        <outlet property="gameNameTextField" destination="Ng1-LX-92L" id="0ml-Uu-Kjg"/>
+                        <outlet property="urlTextField" destination="dRO-AP-iLI" id="Dxv-yA-8ut"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1084" y="-309.89505247376314"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="qKj-52-bRh">
+            <objects>
+                <viewController id="1mC-jX-fyr" customClass="ShowGameListViewController" customModule="Julian_GameIntroductionApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="jwe-h9-3Y4">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="xcJ-tg-mwb">
+                                <rect key="frame" x="0.0" y="20" width="375" height="598"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" rowHeight="119" id="N8G-qV-ViH" customClass="ShowingGameTableViewCell" customModule="Julian_GameIntroductionApp" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="119"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="N8G-qV-ViH" id="0y0-58-8bT">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="118.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ayt-13-U15">
+                                                    <rect key="frame" x="15" y="87.5" width="345" height="20.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="DhD-f1-khk">
+                                                    <rect key="frame" x="55" y="36" width="264" height="30"/>
+                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="30" id="4ay-ZS-rmB"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                                    <dataDetectorType key="dataDetectorTypes" link="YES"/>
+                                                </textView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="DhD-f1-khk" firstAttribute="leading" secondItem="0y0-58-8bT" secondAttribute="leadingMargin" constant="40" id="4ws-kD-KAd"/>
+                                                <constraint firstItem="Ayt-13-U15" firstAttribute="leading" secondItem="0y0-58-8bT" secondAttribute="leadingMargin" id="Bwb-UZ-KJv"/>
+                                                <constraint firstItem="Ayt-13-U15" firstAttribute="bottom" secondItem="0y0-58-8bT" secondAttribute="bottomMargin" id="Dak-a8-1Tj"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="DhD-f1-khk" secondAttribute="trailing" constant="41" id="NYm-KQ-aQp"/>
+                                                <constraint firstItem="Ayt-13-U15" firstAttribute="top" secondItem="DhD-f1-khk" secondAttribute="bottom" constant="21.5" id="Wqs-CN-Dbm"/>
+                                                <constraint firstItem="Ayt-13-U15" firstAttribute="trailing" secondItem="0y0-58-8bT" secondAttribute="trailingMargin" id="hDL-pV-oqO"/>
+                                                <constraint firstItem="DhD-f1-khk" firstAttribute="top" secondItem="0y0-58-8bT" secondAttribute="topMargin" constant="25" id="mYB-lY-kMO"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="gameNameLabel" destination="Ayt-13-U15" id="Mlo-NW-702"/>
+                                            <outlet property="urlTextView" destination="DhD-f1-khk" id="rf9-oI-l6F"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="vdo-ME-Jgr" firstAttribute="bottom" secondItem="xcJ-tg-mwb" secondAttribute="bottom" id="YTs-7s-ytN"/>
+                            <constraint firstItem="xcJ-tg-mwb" firstAttribute="leading" secondItem="vdo-ME-Jgr" secondAttribute="leading" id="fs1-y8-ic8"/>
+                            <constraint firstItem="xcJ-tg-mwb" firstAttribute="top" secondItem="vdo-ME-Jgr" secondAttribute="top" id="iU0-Bf-BsB"/>
+                            <constraint firstItem="vdo-ME-Jgr" firstAttribute="trailing" secondItem="xcJ-tg-mwb" secondAttribute="trailing" id="nvK-HK-SIC"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="vdo-ME-Jgr"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="0te-yz-SXJ"/>
+                    <connections>
+                        <outlet property="table" destination="xcJ-tg-mwb" id="523-uR-FoH"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="pNa-KZ-X3r" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1084" y="731.78410794602701"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="u0u-eP-YLx">
+            <objects>
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="j3I-BR-eG9" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="E1l-HV-m5O">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="sIq-35-Aod"/>
+                        <segue destination="1mC-jX-fyr" kind="relationship" relationship="viewControllers" id="Rw2-p2-SEi"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="DBj-ma-6RR" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="136.80000000000001" y="133.5832083958021"/>
         </scene>
     </scenes>
 </document>
